Fixed the overflow

--- a/css/offered-services.css
+++ b/css/offered-services.css
@@ -27,6 +27,10 @@
     font-family: "Fredoka", sans-serif;
 }
 
+body{
+    overflow: visible;
+}
+
 li {
     list-style-type: none;
     margin: 1rem;
